--- a/config.yaml
+++ b/config.yaml
@@ -1,17 +1,25 @@
 ---
-applications:
-  - guillotina_scootermpi
-  - guillotina.contrib.catalog.pg
-  - guillotina.contrib.swagger
 databases:
   db:
     storage: postgresql
     dsn: postgresql://guillotina@localhost:5432/guillotina
     read_only: false
+cache:
+  driver: guillotina.contrib.redis
+  updates_channel: guillotina
+applications:
+  - guillotina_scootermpi
+  - guillotina.contrib.swagger
+  - guillotina_authentication
+  - guillotina.contrib.catalog.pg
+  - guillotina.contrib.mailer
 host: localhost
 port: 8080
 root_user:
   password: root
+redis:
+  host: redis
+  port: 6379
 auth_extractors:
   - guillotina.auth.extractors.BearerAuthPolicy
   - guillotina.auth.extractors.BasicAuthPolicy
@@ -22,7 +30,9 @@ auth_token_validators:
 cors:
   allow_origin:
     - http://localhost:8080
+    - http://localhost:4200
     - "chrome-extension://*"
+    - "https://client.postman.co"
   allow_methods:
     - GET
     - POST
