--- a/config.yaml
+++ b/config.yaml
@@ -2,18 +2,17 @@
 databases:
   db:
     storage: postgresql
-    dsn: postgresql://guillotina@localhost:5432/guillotina
+    dsn: postgresql://guillotina:guillotina@postgresql:5432/guillotina
     read_only: false
-cache:
-  driver: guillotina.contrib.redis
-  updates_channel: guillotina
+# cache:
+#   driver: guillotina.contrib.redis
+#   updates_channel: guillotina
 applications:
   - guillotina_scootermpi
   - guillotina.contrib.swagger
   - guillotina_authentication
-  - guillotina.contrib.catalog.pg
-  - guillotina.contrib.mailer
-host: localhost
+  - guillotina_elasticsearch
+host: 0.0.0.0
 port: 8080
 root_user:
   password: root
@@ -29,10 +28,7 @@ auth_token_validators:
   - guillotina.auth.validators.JWTValidator
 cors:
   allow_origin:
-    - http://localhost:8080
-    - http://localhost:4200
-    - "chrome-extension://*"
-    - "https://client.postman.co"
+    - "*"
   allow_methods:
     - GET
     - POST
@@ -52,3 +48,50 @@ jwt:
   algorithm: HS256
 jsapps:
   +admin: guillotina:static/executioner
+elasticsearch:
+  index_name_prefix: "guillotina-scooter-"
+  connection_settings:
+    hosts:
+      - elasticsearch:9200
+    sniffer_timeout: 0.5
+    sniff_timeout: 30
+    sniff_on_start: true
+    sniff_on_connection_fail: true
+  bulk_size: 20
+  security_query_builder: "guillotina_elasticsearch.queries.build_security_query"
+load_utilities:
+  catalog:
+    provides: guillotina_elasticsearch.utility.IElasticSearchUtility
+    factory: guillotina_elasticsearch.utility.ElasticSearchUtility
+    settings: {}
+logging:
+  version: 1
+  formatters:
+    brief:
+      format: "%(message)s"
+    default:
+      format: "%(asctime)s %(levelname)-8s %(name)-15s %(message)s"
+      datefmt: "%Y-%m-%d %H:%M:%S"
+  handlers:
+    console:
+      class: "logging.StreamHandler"
+      formatter: "brief"
+      level: "INFO"
+      stream: "ext://sys.stdout"
+  loggers:
+    uvicorn:
+      level: "INFO"
+      handlers: ["console"]
+      propagate: 0
+    backend:
+      level: "INFO"
+      handlers: ["console"]
+      propagate: 0
+    guillotina:
+      level: "DEBUG"
+      handlers: ["console"]
+      propagate: 1
+    guillotina_elasticsearch:
+      level: "DEBUG"
+      handlers: ["console"]
+      propagate: 1
