--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 guillotina>=6.0.0a11
+guillotina_elasticsearch
 diff-match-patch==20121119
 Pillow
 plone.scale>=3.0.1
 guillotina_linkintegrity>=5.0.2
 guillotina_authentication
 uvicorn
+elasticsearch-dsl
 
 # Guillotina contrib
 aioredis>=1.2.0;python_version<"3.8"
